-Fix TP resume problems, part2 -Improved TP precission, needs pref("ui.touch_activation.delay_ms", 180) to work OK on homescreen v1-train gaia version

--- a/drivers/video/msm/Makefile
+++ b/drivers/video/msm/Makefile
@@ -116,7 +116,6 @@ obj-y += mipi_novatek_video_qhd_pt.o mipi_novatek_cmd_qhd_pt.o
 obj-y += mipi_renesas_video_fwvga_pt.o mipi_renesas_cmd_fwvga_pt.o
 obj-y += mipi_chimei_wxga_pt.o
 obj-y += mipi_truly_video_wvga_pt.o
-#qiuli@cellon_drv@20111213++ argonpsin lcd drv
 obj-y += mipi_ILI9487_cmd_hvga_pt.o
 obj-y += mipi_hx8357_cmd_hvga_pt.o
 else
@@ -130,10 +129,9 @@ obj-$(CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT) += mipi_renesas_cmd_fwvga_pt.o
 obj-$(CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT) += mipi_truly_video_wvga_pt.o
 obj-$(CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO) += mipi_simulator_video.o
 obj-$(CONFIG_FB_MSM_MIPI_CHIMEI_WXGA) += mipi_chimei_wxga_pt.o
-#qiuli@cellon_drv@20111213++ argonpsin lcd drv
 obj-$(CONFIG_FB_MSM_MIPI_HX8357_VIDEO_HVGA_PT) += mipi_hx8357_video_hvga_pt.o
 obj-$(CONFIG_FB_MSM_MIPI_HX8357_CMD_HVGA_PT) += mipi_hx8357_cmd_hvga_pt.o
-
+obj-$(CONFIG_FB_MSM_MIPI_ILI9487_CMD_HVGA_PT) += mipi_ILI9487_cmd_hvga_pt.o
 endif
 
 obj-$(CONFIG_FB_MSM_LCDC_PANEL) += lcdc_panel.o
