--- a/arch/arm/configs/C8666_defconfig
+++ b/arch/arm/configs/C8666_defconfig
@@ -1691,13 +1691,12 @@ CONFIG_MSM_CAMERA=y
 # CONFIG_MT9E013 is not set
 # CONFIG_IMX074_ACT is not set
 # CONFIG_S5K3E2FX is not set
-CONFIG_S5K4E1=y
-# CONFIG_DW9712_ACT is not set
+# CONFIG_S5K4E1 is not set
 # CONFIG_MSM_CAMERA_FLASH_SC628A is not set
-CONFIG_IMX072=y
+# CONFIG_IMX072 is not set
 # CONFIG_OV2720 is not set
 # CONFIG_VB6801 is not set
-CONFIG_MSM_CAMERA_FLASH=y
+# CONFIG_MSM_CAMERA_FLASH is not set
 # CONFIG_MSM_CAMERA_SENSOR is not set
 # CONFIG_MSM_ACTUATOR is not set
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
@@ -1734,7 +1733,7 @@ CONFIG_MSM_KGSL=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
-CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES=y
+# CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -1769,7 +1768,7 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
 # CONFIG_FB_MSM_LOGO is not set
 CONFIG_FB_MSM_LCDC_HW=y
-# CONFIG_FB_MSM_TRIPLE_BUFFER is not set
+CONFIG_FB_MSM_TRIPLE_BUFFER=y
 # CONFIG_FB_MSM_MDP22 is not set
 CONFIG_FB_MSM_MDP30=y
 CONFIG_FB_MSM_MDP303=y
@@ -1788,14 +1787,12 @@ CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL is not set
-CONFIG_FB_MSM_MIPI_DSI_TOSHIBA=y
-CONFIG_FB_MSM_MIPI_DSI_RENESAS=y
-CONFIG_FB_MSM_MIPI_DSI_TRULY=y
-CONFIG_FB_MSM_MIPI_DSI_HX8357=y
+# CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
+# CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
+# CONFIG_FB_MSM_MIPI_DSI_HX8357 is not set
 CONFIG_FB_MSM_MIPI_DSI_ILI9487=y
-CONFIG_FB_MSM_MIPI_DSI_SIMULATOR=y
-CONFIG_FB_MSM_MIPI_DSI_NOVATEK=y
-CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
+# CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
+# CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
@@ -1809,19 +1806,18 @@ CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_SAMSUNG_OLED_PT is not set
 # CONFIG_FB_MSM_LCDC_NT35582_WVGA is not set
 # CONFIG_FB_MSM_LCDC_WXGA is not set
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA=y
-CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT=y
-CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT=y
-CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_CHIMEI_WXGA=y
-CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_HX8357_VIDEO_HVGA_PT=y
-CONFIG_FB_MSM_MIPI_HX8357_CMD_HVGA_PT=y
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA is not set
+# CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
+# CONFIG_FB_MSM_MIPI_HX8357_VIDEO_HVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_HX8357_CMD_HVGA_PT is not set
 CONFIG_FB_MSM_MIPI_ILI9487_CMD_HVGA_PT=y
-CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO=y
+# CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_CHIMEI_WXGA_PANEL is not set
@@ -1833,7 +1829,7 @@ CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO=y
 # CONFIG_FB_MSM_LCDC_NT35582_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_OLED_PT_PANEL is not set
 # CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
-CONFIG_FB_MSM_MIPI_PANEL_DETECT=y
+# CONFIG_FB_MSM_MIPI_PANEL_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT is not set
@@ -1853,7 +1849,7 @@ CONFIG_FB_MSM_MIPI_PANEL_DETECT=y
 # CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_HX8357_VIDEO_HVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_HX8357_CMD_HVGA_PT_PANEL is not set
-# CONFIG_FB_MSM_MIPI_ILI9487_CMD_HVGA_PT_PANEL is not set
+CONFIG_FB_MSM_MIPI_ILI9487_CMD_HVGA_PT_PANEL=y
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL is not set
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
 # CONFIG_FB_MSM_PANEL_NONE is not set
