--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -51,5 +51,4 @@ obj-$(CONFIG_INPUT_YEALINK)		+= yealink.o
 obj-$(CONFIG_PMIC8058_OTHC)             += pmic8058-othc.o
 obj-$(CONFIG_INPUT_PMIC8058_VIBRA_MEMLESS) += pmic8058-vib-memless.o
 obj-$(CONFIG_BOSCH_BMA150)              += bma150.o
-obj-y += stk31xx_int.o
-
+obj-$(CONFIG_STK31XX_INT_MODE)	+= stk31xx_int.o
