Improved TP response and reduced lag with vsync

--- a/arch/arm/configs/C8666_defconfig
+++ b/arch/arm/configs/C8666_defconfig
@@ -80,19 +80,7 @@ CONFIG_RCU_BOOST_DELAY=300
 CONFIG_IKCONFIG=y
 # CONFIG_IKCONFIG_PROC is not set
 CONFIG_LOG_BUF_SHIFT=17
-CONFIG_CGROUPS=y
-# CONFIG_CGROUP_DEBUG is not set
-CONFIG_CGROUP_FREEZER=y
-CONFIG_CGROUP_DEVICE=y
-# CONFIG_CPUSETS is not set
-CONFIG_CGROUP_CPUACCT=y
-CONFIG_RESOURCE_COUNTERS=y
-# CONFIG_CGROUP_MEM_RES_CTLR is not set
-# CONFIG_CGROUP_PERF is not set
-CONFIG_CGROUP_SCHED=y
-CONFIG_FAIR_GROUP_SCHED=y
-CONFIG_RT_GROUP_SCHED=y
-# CONFIG_BLK_CGROUP is not set
+# CONFIG_CGROUPS is not set
 # CONFIG_NAMESPACES is not set
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
@@ -1793,6 +1781,9 @@ CONFIG_FB_MSM_MIPI_ILI9487_CMD_HVGA_PT_PANEL=y
 # CONFIG_FB_MSM_EXT_INTERFACE_COMMON is not set
 # CONFIG_FB_MSM_HDMI_COMMON is not set
 # CONFIG_FB_MSM_HDMI_3D is not set
+CONFIG_FB_MSM_DEFAULT_DEPTH_RGB565=y
+# CONFIG_FB_MSM_DEFAULT_DEPTH_ARGB8888 is not set
+# CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888 is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 
 #
