Display timming was too fast, we made it more user friendly

--- a/arch/arm/configs/C8666_defconfig
+++ b/arch/arm/configs/C8666_defconfig
@@ -45,7 +45,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -160,7 +160,7 @@ CONFIG_LBDAF=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_DEADLINE=y
+# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
@@ -307,12 +307,12 @@ CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
 # CONFIG_MSM7X00A_SLEEP_MODE_RAMP_DOWN_AND_WAIT_FOR_INTERRUPT is not set
 # CONFIG_MSM7X00A_SLEEP_WAIT_FOR_INTERRUPT is not set
 CONFIG_MSM7X00A_SLEEP_MODE=0
-CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
-# CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE is not set
+# CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
+CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE=y
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_APPS_SLEEP is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_RAMP_DOWN_AND_WAIT_FOR_INTERRUPT is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_WAIT_FOR_INTERRUPT is not set
-CONFIG_MSM7X00A_IDLE_SLEEP_MODE=0
+CONFIG_MSM7X00A_IDLE_SLEEP_MODE=1
 CONFIG_MSM7X00A_IDLE_SLEEP_MIN_TIME=20000000
 CONFIG_MSM7X00A_IDLE_SPIN_TIME=80000
 CONFIG_MSM_IDLE_STATS=y
@@ -369,7 +369,7 @@ CONFIG_MSM_PROC_COMM_REGULATOR=y
 # CONFIG_WIFI_CONTROL_FUNC is not set
 CONFIG_AUDIO_AAC_PLUS=y
 CONFIG_AUDIO_ENHANCED_AAC_PLUS=y
-CONFIG_SURF_FFA_GPIO_KEYPAD=y
+# CONFIG_SURF_FFA_GPIO_KEYPAD is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 # CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
@@ -478,10 +478,10 @@ CONFIG_OABI_COMPAT=y
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 CONFIG_HAVE_ARCH_PFN_VALID=y
-CONFIG_HIGHMEM=y
+# CONFIG_HIGHMEM is not set
 # CONFIG_HIGHPTE is not set
 CONFIG_HW_PERF_EVENTS=y
-CONFIG_VMALLOC_RESERVE=0xC800000
+CONFIG_VMALLOC_RESERVE=0x08000000
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
 CONFIG_FLATMEM=y
@@ -1117,8 +1117,7 @@ CONFIG_PPPOE=y
 CONFIG_PPTP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
-CONFIG_SLIP=y
-CONFIG_SLIP_COMPRESSED=y
+# CONFIG_SLIP is not set
 CONFIG_SLHC=y
 # CONFIG_SLIP_SMART is not set
 # CONFIG_SLIP_MODE_SLIP6 is not set
